# ansible-deploy

./: README.md  ansible.cfg  documentation.md  pyproject.toml  setup.py
inventory/: hosts.ini
monitoring-tool/alertmanager/: config.yml
playbooks/: deploy_server.yml  prerequisite_check.py
playbooks/roles/AI_Assistant/tasks/: main.yml  staging-production-deploy.yml
playbooks/roles/AI_Assistant/templates/: ai-assistant.env  docker-compose.production.yml  docker-compose.staging.yml
playbooks/roles/Annotation/tasks/: main.yml
playbooks/roles/Annotation/templates/: .env  docker-compose.yml.j2  env.j2
playbooks/roles/Authentication_Service/tasks/: main.yml  staging-production-deploy.yml
playbooks/roles/Authentication_Service/templates/: docker-compose.production.yml  docker-compose.staging.yml
playbooks/roles/Custom_Atomspace_builder/tasks/: main.yml
playbooks/roles/Custom_Atomspace_builder/templates/: config.yaml.j2  custom-atomspace-builder.env
playbooks/roles/Galaxy/tasks/: main.yml
playbooks/roles/Hypothesis/tasks/: main.yml  staging-production-deploy.yml
playbooks/roles/Hypothesis/templates/: .env  docker-compose.production.yml  docker-compose.staging.yml
playbooks/roles/MORK/tasks/: main.yml
playbooks/roles/Platform_UI/files/: Dockerfile
playbooks/roles/Platform_UI/tasks/: main.yml  production.yml  staging.yml
playbooks/roles/Platform_UI/templates/: UI.env
playbooks/roles/UI/files/: Dockerfile  docker-ui-run.sh
playbooks/roles/UI/tasks/: main.yml
playbooks/roles/UI/templates/: UI.env
playbooks/roles/biocypher/tasks/: main.yml
(+6 files in other folders)
